# text-glosser

./: .buildinfo  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  development.html  docker-compose.dev.yml  docker-compose.yml  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml  docs.yml  tests.yml
_sources/: development.rst.txt  quickstart.rst.txt
docs/: conf.py  development.rst  index.rst  installation.rst  quickstart.rst
language_resources/ar/lane-lexicon/: Lane-Arabic-English-Lexicon.idx  Lane-Arabic-English-Lexicon.ifo
language_resources/ar/salmone-lexicon/: Salmone-Ara-Eng-Lexicon.dict.dz  Salmone-Ara-Eng-Lexicon.idx  Salmone-Ara-Eng-Lexicon.ifo
language_resources/sa/monier-williams-cologne/: mw-cologne.ifo
src/text_glosser/: __init__.py
src/text_glosser/cli/: __init__.py  main.py
src/text_glosser/core/: __init__.py  exporters.py  ingestion.py  models.py  processor.py  registry.py  session.py
src/text_glosser/core/parsers/: __init__.py  stardict.py
src/text_glosser/utils/: security.py
src/text_glosser/web/: __init__.py  main.py
tests/: __init__.py  deer-park.txt
tests/unit/: test_models.py  test_security.py  test_web.py  test_web_upload.py
